chore : 서버 및 db 설정 변경

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,9 +5,10 @@ spring:
       suffix: .jsp
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/ssafytrip?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: ua8747ll
+    jdbc-url: jdbc:mysql://127.0.0.1:3306/ssafytrip?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    username: ssafy
+    password: ssafy
+
     hikari:
       maximum-pool-size: 10
       minimum-idle: 10
