chore : openai 설정 추가

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -30,3 +30,9 @@ spring:
 
 server:
   port: 80
+
+openai:
+  model: gpt-4o
+  api:
+    key: sk-proj-anYCJixL0n0sYbiRCTSHT3BlbkFJupIRPXx2l6pPsBSvcbYC
+    url: https://api.openai.com/v1/chat/completions
