--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -32,7 +32,7 @@ server:
   port: 80
 
 openai:
-  model: gpt-4o
+  model: gpt-3.5-turbo-16k
   api:
     key: sk-proj-H4QcZBnQSriDCZHcqqXqT3BlbkFJ3Wy2Li6xyTYzx5qYiXhX
     url: https://api.openai.com/v1/chat/completions
