--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
       suffix: .jsp
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://192.168.204.102:3306/ssafytrip?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    jdbc-url: jdbc:mysql://localhost/ssafytrip?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
     username: ssafy
     password: ssafy
 
